The 'New Collection' entry in the 'Move to Collection' menu cannot be translated #93766

Closed
opened 2021-12-06 21:17:55 +01:00 by Lucas · 4 comments
Member

When the user wants to move an object to a collection by pressing "M" (or right-clicking on the object and "Move to collection"), Blender allows the user to create a new collection.

However, the "New collection" option is always shown in English:
image.png

I was able to find a matching string in the po file, but I don't think it's related to this menu item because the additional message for this string says: :src: bpy.types.OUTLINER_OT_collection_new, so I think the string is related to the "New Collection" option available in the Outliner (this is one is indeed translated as expected).

Can you check why we are unable to translate the "New Collection" option shown in the Move to collection menu?

I tested with version 3.1.0-alpha+master.3f7014ecc9d5-windows.amd64-release

When the user wants to move an object to a collection by pressing "M" (or right-clicking on the object and "Move to collection"), Blender allows the user to create a new collection. However, the "New collection" option is always shown in English: ![image.png](https://archive.blender.org/developer/F12699759/image.png) I was able to find a matching string in the `po` file, but I don't think it's related to this menu item because the additional message for this string says: `:src: bpy.types.OUTLINER_OT_collection_new`, so I think the string is related to the "New Collection" option available in the Outliner (this is one is indeed translated as expected). Can you check why we are unable to translate the "New Collection" option shown in the Move to collection menu? I tested with version `3.1.0-alpha+master.3f7014ecc9d5-windows.amd64-release`
Author
Member

Added subscriber: @Swisstone

Added subscriber: @Swisstone
Germano Cavalcante changed title from "Move to collection" shows the "New Collection" menu item in English to The 'New Collection' entry in the 'Move to Collection' menu cannot be translated 2021-12-14 19:50:40 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 58e0aa36ea

This issue was referenced by 58e0aa36ea0d434038e54ca00ddd6de6a840be2c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-01-27 17:02:22 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93766
No description provided.