Fix T93766: 'New Collection' entry in 'Move to collection' menu is not translated.

Also fixes similar issues regarding some liboverride menu entries.

Reviewed By: mont29

Maniphest Tasks: T93766

Differential Revision: https://developer.blender.org/D13513